--- a/index.html
+++ b/index.html
@@ -7,12 +7,28 @@ and open the template in the editor.
 <html>
     <head>
         <title>My first web site</title>
+        <style>
+            h1{background-color:silver;
+            color:gold;
+            font-family: monospace;
+            text-align: center;
+            }
+            h2{font-family:serif;
+            font-size: 2em;
+            color:activecaption;
+            background-color: moccasin;
+            }
+            h3#first
+            </style>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body text="#1B9443" bgclor="#7E9855"> <font face="verdana"</FONT>
-        <h1><font face="Comic Sans MS" size="7" color ="#FF2222">Welcome!!</FONT><h1>
-                i will share my project processing <h2> for CS102 course <h2> in this page </h2>
-                    <p><em>i hope you enjoy!</p>
+    <body> 
+        
+        <h1>Welcome!!</h1>
+               <h2>  i will share my project processing 
+                for CS102 course in this page </h2>
+        <h3 id="first"> my interests </h3>
+                    <p>i hope you enjoy!</p>
     </body>
 </html>
