Added files via upload

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@ and open the template in the editor.
             color:activecaption;
             background-color: moccasin;
             }
-            h3#first
+           h3#first{color: activecaption}
+           h4#second{color:activecaption}
+           .h1h2{color:skyblue}
             </style>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +30,8 @@ and open the template in the editor.
         <h1>Welcome!!</h1>
                <h2>  i will share my project processing 
                 for CS102 course in this page </h2>
-        <h3 id="first"> my interests </h3>
-                    <p>i hope you enjoy!</p>
+        <h3 id="first">My biography</h3>
+        <h4 id="second"> My Interests </h4>
+                    <p class="h1h2">i hope you enjoy!</p>
     </body>
 </html>
