Added files via upload

--- a/forms.html
+++ b/forms.html
@@ -13,6 +13,10 @@ and open the template in the editor.
     font-size: 0.9em;
     font-style:   oblique
       }
+      input[type=text]
+      {padding:5px;
+     display: table-header-group
+      }
         
     </style>
        <meta charset="UTF-8"> <style>
