Added files via upload

--- a/forms.html
+++ b/forms.html
@@ -6,8 +6,8 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Form</title>
-           <style>
+      <title>Form</title>
+       <style>
         label
    {color:  royalblue;
     font-size: 0.9em;
@@ -15,21 +15,20 @@ and open the template in the editor.
       }
       input[type=text]
       {padding:5px;
-     display: table-header-group
-      }
-        
+     display: table-header-group;
+  border-width:3px;
+      border-color:powderblue  ;
+      border-style:  outset
+     }
+   
     </style>
-       <meta charset="UTF-8"> <style>
-        input[type=text]
-        {  }
-        
-    </style>
+       <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
  
     <body>
         <h1>Form</h1>
-        <div>
+        <div id="org">
             <form action=""  >
                 <label for="first"> Firstname </label>
                <input type="text" id="first" name="firstname" /> </br>
