Added files via upload

--- a/forms.html
+++ b/forms.html
@@ -36,6 +36,8 @@ and open the template in the editor.
                <input type="text" id="second" name="surname"/></br>
           <label for="mail"> E-mail</label>
           <input type="text" id="mail" name="e-mail"/></br>
+          <label for="number">Student ID Number</label>
+          <input type="text" id="number" name="id number"/></br>
           <label for="hobby">Select Your Favourite Hobby</label>
           <select id="hobby" name="favourite hobby">
               <option value="go hiking">Go Hiking</option>
