--- a/for.html
+++ b/for.html
@@ -1,26 +1,24 @@
+
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
         <title>For Continued</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+          <link rel="icon" type="image/x-icon" href="favicon.ico" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>        
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="forc.js"></script>
         <style>
-            .appearence{
-            position:absolute; 
-            background-color:bisque; 
-            top:70px; 
-            left:70px;
+            .outlook {
+                position:absolute; 
+                width:75px; 
+                height:85px; 
             }
         </style>
     </head>
     <body>
-        <div id="disp"> </div>
+        <div id="disp">
+            
+        </div>
     </body>
 </html>
