--- a/project.html
+++ b/project.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Dynamic Quiz Project</title>
+  <title>Game Project</title>
   <link type='text/css' rel='stylesheet' href='stylesheet.css' />
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans" />
   <style>
@@ -38,7 +38,7 @@ h1 {
 
 .button.active {
     background-color: #F8F8FF;
-    color: #525252;
+    color:  rosybrown;
 }
 
 button {
@@ -52,10 +52,10 @@ button {
 }
 
 #container {
-    width:50%;
+    width:40%;
     margin:auto;
     padding: 0 25px 40px 10px;
-    background-color: #1E90FF;
+    background-color: teal;
     border:4px solid #B0E0E6;
     border-radius:5px;
     color: #FFFFFF;
@@ -77,6 +77,9 @@ ul {
     display:none;
     width: 90px;
 }
+#a { position: relative; top: 50px ; left: 300px; }
+#b{ position: relative; top: 50px ; left: 400px; }
+#c { position: relative; top: 50px ; left: 500px; }
   </style>
 </head>
 
@@ -94,9 +97,9 @@ ul {
     		<button class='' id='prev'>Prev</a></button>
     		<button class='' id='start'> Start Over</a></button> -->
   </div>
- <img style="-webkit-user-select: none" src="http://www.chemeddl.org/resources/models360/files/750/glycine-jmol.jpeg"width="190" height="190" v>
-    <img style="-webkit-user-select: none" src="http://www.chemeddl.org/resources/models360/files/145742/L-proline-jmol.jpeg" width="190" height="190">
-     <img style="-webkit-user-select: none" src="http://www.chemeddl.org/resources/models360/files/440015/L-4-hydroxyproline-jmol.jpeg" width="190" height="190">   
+ <img id="a" style="-webkit-user-select: none" src="http://www.chemeddl.org/resources/models360/files/750/glycine-jmol.jpeg"width="190" height="190" v>
+    <img id="b" style="-webkit-user-select: none" src="http://www.chemeddl.org/resources/models360/files/145742/L-proline-jmol.jpeg" width="190" height="190">
+     <img id="c" style="-webkit-user-select: none" src="http://www.chemeddl.org/resources/models360/files/440015/L-4-hydroxyproline-jmol.jpeg" width="190" height="190">   
   <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
   <script type="text/javascript" src='questions.json'></script>
   <script type='text/javascript' src='project.js'></script>
